[package]
name = "cplus_demangle"
description = "Rust wrapper for GNU libiberty's cplus_demangle to demangle C++ symbols"
version = "0.1.2"
authors = ["Vivek Jain <vivek@vivekja.in>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/viveksjain/rust_cplus_demangle"
keywords = ["demangle", "symbolicate", "c-plus-plus", "cpp"]
readme = "README.md"
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"

[build-dependencies]
cc = "1.0"
